# brain-locations-visualizer

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/auto_examples/: index.doctree  plot_fibers_in_striatum_coronal_view.doctree  plot_fibers_in_striatum_side_view.doctree  sg_execution_times.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/brain_locations_visualizer/: index.doctree
.doctrees/autoapi/brain_locations_visualizer/config_parser/: index.doctree
.doctrees/autoapi/brain_locations_visualizer/generate_all_figures/: index.doctree
.doctrees/autoapi/brain_locations_visualizer/plotting_functions/: index.doctree
.github/workflows/: documentation.yaml  test_and_deploy.yml
_downloads/1d2a5fcec5186fb0a4921a903d6e2c10/: plot_fibers_in_striatum_coronal_view.ipynb
_downloads/3cde26eeb5d79fdc241ac7c60a347525/: plot_fibers_in_striatum_side_view.ipynb
_downloads/3efbd271a2c5fe3f564549fc018b2a0f/: plot_fibers_in_striatum_side_view.py
_downloads/de820b57c97becbba5c6c5f34b1d1cd0/: plot_fibers_in_striatum_coronal_view.py
_sources/auto_examples/: index.rst.txt  plot_fibers_in_striatum_coronal_view.rst.txt  plot_fibers_in_striatum_side_view.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/brain_locations_visualizer/: index.rst.txt
_sources/autoapi/brain_locations_visualizer/config_parser/: index.rst.txt
auto_examples/: index.html  plot_fibers_in_striatum_coronal_view.html  plot_fibers_in_striatum_side_view.html  sg_execution_times.html
autoapi/: index.html
autoapi/brain_locations_visualizer/: index.html
autoapi/brain_locations_visualizer/config_parser/: index.html
autoapi/brain_locations_visualizer/generate_all_figures/: index.html
autoapi/brain_locations_visualizer/plotting_functions/: index.html
brain_locations_visualizer/: __init__.py  config_parser.py  generate_all_figures.py  plot_fiber_tips_2D_striatum.py  plotting_functions.py
data/: example_config.json  example_locations.txt
docs/examples/: README.rst  README.txt  config_for_documentation.json  plot_fiber_tips_2D_striatum.py  plot_fibers_in_striatum_coronal_view.py  plot_fibers_in_striatum_side_view.py
docs/sphinx/source/: conf.py  index.rst
(+18 files in other folders)
